test/variable/collide_with_parameter.lox
fn foo(a) {
  var a // error: already a variable with this name in this scope
}
